#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(HelloWorld, 1.0, feixiao2020@sina.com)
AC_CONFIG_SRCDIR([helloworld.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(HelloWorld, 1.0) 

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
